--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.23.0",
+    "react-router-dom": "^6.23.1",
+    "react-select": "^5.8.0",
     "styled-components": "^6.1.10",
     "vite-plugin-svgr": "^4.2.0"
   },
