--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
     "@reduxjs/toolkit": "^2.2.6",
+    "clsx": "^2.1.1",
     "firebase": "^10.12.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,6 +20,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-select": "^5.8.0",
+    "redux-persist": "^6.0.0",
     "styled-components": "^6.1.10",
     "vite-plugin-svgr": "^4.2.0",
     "yup": "^1.4.0"
